src/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool
  namespace: 2-3
spec:
  selector:
    app: nginx-multitool
  ports:
    - protocol: TCP
      name: nginx
      port: 80
      targetPort: 80    
    - protocol: TCP
      name: multitool
      port: 8080
      targetPort: 8080
